[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/menu2D.gd" type="Script" id=1]
[ext_resource path="res://Menu/Menu3DBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/music/104315__proxima4__desert-approach.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/music/Violin and Piano.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/cactusjustice.png" type="Texture" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id=2]
resource_name = "title"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2.14355, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
render_target_v_flip = true
shadow_atlas_size = 5

[node name="menu3D" parent="Viewport" instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12.0062, -7.00342 )
scale = Vector2( 0.55, 0.58 )
texture = SubResource( 1 )
offset = Vector2( 958.28, 539.641 )

[node name="main" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = -53.5
margin_right = 64.5
margin_bottom = 53.5

[node name="playBtn" type="Button" parent="main/VBoxContainer"]
margin_right = 129.0
margin_bottom = 20.0
text = "Play"

[node name="VSplitContainer" type="VSplitContainer" parent="main/VBoxContainer"]
margin_top = 24.0
margin_right = 129.0
margin_bottom = 24.0

[node name="creditsBtn" type="Button" parent="main/VBoxContainer"]
margin_top = 28.0
margin_right = 129.0
margin_bottom = 48.0
text = "Credits"

[node name="VSplitContainer2" type="VSplitContainer" parent="main/VBoxContainer"]
margin_top = 52.0
margin_right = 129.0
margin_bottom = 52.0

[node name="optionsBtn" type="Button" parent="main/VBoxContainer"]
margin_top = 56.0
margin_right = 129.0
margin_bottom = 76.0
text = "Options"

[node name="VSplitContainer3" type="VSplitContainer" parent="main/VBoxContainer"]
margin_top = 80.0
margin_right = 129.0
margin_bottom = 80.0

[node name="quitBtn" type="Button" parent="main/VBoxContainer"]
margin_top = 84.0
margin_right = 129.0
margin_bottom = 104.0
text = "Quit"

[node name="options" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="fullscrnBtn" type="Button" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -54.0
margin_right = 64.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 0.845642, -0.268539 )
disabled = true
text = "toggle fullscreen"

[node name="toggleAimBtn" type="Button" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -25.0
margin_right = 64.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 0.845642, -0.268539 )
disabled = true
text = "Hold to aim"

[node name="muteBtn" type="Button" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 3.0
margin_right = 64.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0.845642, -0.268539 )
disabled = true
text = "mute"

[node name="sizeBtn" type="OptionButton" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 31.0
margin_right = 64.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0.845642, -0.268539 )
disabled = true
text = "1920x1080"

[node name="options_backBtn" type="Button" parent="options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0.845642, -0.268539 )
text = "Back"

[node name="credits" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="credits_backBtn" type="Button" parent="credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = -20.0
text = "Back"

[node name="desertStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="musicstream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="title" type="Sprite" parent="."]
position = Vector2( 503.533, 54.4845 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "title"
anims/title = SubResource( 2 )

[connection signal="pressed" from="main/VBoxContainer/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="main/VBoxContainer/creditsBtn" to="." method="_on_creditsBtn_pressed"]
[connection signal="pressed" from="main/VBoxContainer/optionsBtn" to="." method="_on_optionsBtn_pressed"]
[connection signal="pressed" from="main/VBoxContainer/quitBtn" to="." method="_on_quitBtn_pressed"]
[connection signal="pressed" from="options/fullscrnBtn" to="." method="_on_fullscrnBtn_pressed"]
[connection signal="pressed" from="options/toggleAimBtn" to="." method="_on_toggleAimBtn_pressed"]
[connection signal="pressed" from="options/muteBtn" to="." method="_on_muteBtn_pressed"]
[connection signal="item_selected" from="options/sizeBtn" to="." method="_on_sizeBtn_item_selected"]
[connection signal="pressed" from="options/options_backBtn" to="." method="_on_backBtn_pressed"]
[connection signal="pressed" from="credits/credits_backBtn" to="." method="_on_backBtn_pressed"]
[connection signal="finished" from="desertStream" to="." method="_on_desertStream_finished"]
[connection signal="finished" from="musicstream" to="." method="_on_musicstream_finished"]
